--- a/JKIguatemi/Base.lproj/Main.storyboard
+++ b/JKIguatemi/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="X3N-l7-Pbz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Osb-xY-CtT">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -18,12 +18,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="320" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OO1-zw-pBu">
-                                <rect key="frame" x="0.0" y="116" width="414" height="620"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="320" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="OO1-zw-pBu">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="buttonCell" rowHeight="80" id="j0o-Ow-IY7" customClass="HomeButtonCell" customModule="JKIguatemi" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="80"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="j0o-Ow-IY7" id="hvz-Q6-52F">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1tP-NY-lhP">
+                                                    <rect key="frame" x="117" y="0.0" width="181" height="44"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="backgroundColor" name="Gold"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                                    <state key="normal" title="Escanear">
+                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </state>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="8"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                    <connections>
+                                                        <action selector="scanPressed:" destination="j0o-Ow-IY7" eventType="touchUpInside" id="6zF-by-fGp"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" rowHeight="320" id="dP1-mh-TfE" customClass="HomeCell" customModule="JKIguatemi" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="320"/>
+                                        <rect key="frame" x="0.0" y="108" width="414" height="320"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dP1-mh-TfE" id="aeH-E6-bSf">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="320"/>
@@ -150,18 +178,13 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="OO1-zw-pBu" firstAttribute="bottom" secondItem="LmD-S0-Llg" secondAttribute="bottom" id="YUb-yE-EsI"/>
-                            <constraint firstAttribute="trailing" secondItem="OO1-zw-pBu" secondAttribute="trailing" id="Yaz-9a-gQm"/>
-                            <constraint firstItem="OO1-zw-pBu" firstAttribute="top" secondItem="LmD-S0-Llg" secondAttribute="top" id="kUQ-I8-5uA"/>
-                            <constraint firstItem="OO1-zw-pBu" firstAttribute="leading" secondItem="uwT-Sf-jXw" secondAttribute="leading" id="vXO-g0-n8o"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="LmD-S0-Llg"/>
                     </view>
                     <navigationItem key="navigationItem" title="JK Iguatemi" id="eqe-Kl-WKi"/>
                     <connections>
                         <outlet property="tableView" destination="OO1-zw-pBu" id="f2b-4H-ui5"/>
                         <segue destination="JQC-Ix-Eb4" kind="show" identifier="toInfluencerVC" id="imL-D9-GQD"/>
+                        <segue destination="xgF-Ty-ZSY" kind="show" identifier="toBroadcastVC" id="a3n-11-hzn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xjG-ko-Khy" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -211,21 +234,18 @@
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
                                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4va-bB-tLT">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="150" height="213"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="150" height="260"/>
                                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                     </imageView>
-                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Donec non felis risus. Integer fringilla est" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aJh-qu-Czi">
-                                                                        <rect key="frame" x="0.0" y="221" width="150" height="39"/>
+                                                                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icon-check" translatesAutoresizingMaskIntoConstraints="NO" id="IIL-wG-ZWW">
+                                                                        <rect key="frame" x="125" y="0.0" width="25" height="25"/>
                                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                                                        <nil key="textColor"/>
-                                                                        <nil key="highlightedColor"/>
-                                                                    </label>
+                                                                    </imageView>
                                                                 </subviews>
                                                             </view>
                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <connections>
-                                                                <outlet property="aboutLabel" destination="aJh-qu-Czi" id="5sn-Jo-dsY"/>
+                                                                <outlet property="checkImageView" destination="IIL-wG-ZWW" id="Tvj-E7-vTH"/>
                                                                 <outlet property="imageView" destination="4va-bB-tLT" id="8AO-nE-Gno"/>
                                                             </connections>
                                                         </collectionViewCell>
@@ -337,6 +357,7 @@
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                             <connections>
+                                <action selector="broadcastPressed:" destination="JQC-Ix-Eb4" eventType="touchUpInside" id="45X-mL-heA"/>
                                 <segue destination="xgF-Ty-ZSY" kind="show" id="ylN-Zk-gCy"/>
                             </connections>
                         </button>
@@ -352,7 +373,7 @@
                     <viewLayoutGuide key="safeArea" id="alR-SE-XKT"/>
                 </view>
             </objects>
-            <point key="canvasLocation" x="340.57971014492756" y="132.88043478260872"/>
+            <point key="canvasLocation" x="-571" y="-598"/>
         </scene>
         <!--Home Search View Controller-->
         <scene sceneID="41H-eE-tlg">
@@ -416,7 +437,7 @@
         <!--Broadcast View Controller-->
         <scene sceneID="8bA-ze-V6J">
             <objects>
-                <viewController id="xgF-Ty-ZSY" customClass="BroadcastViewController" customModule="JKIguatemi" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="BroadcastVC" id="xgF-Ty-ZSY" customClass="BroadcastViewController" customModule="JKIguatemi" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="XcC-Yw-vAo">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -518,9 +539,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="gCQ-4G-EN7"/>
                     </view>
-                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="loadingContainerView" destination="YKn-X3-4cr" id="bHh-77-sWq"/>
+                        <segue destination="X3N-l7-Pbz" kind="show" identifier="toSelectionVC" id="PI6-pC-Mfc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O6V-ky-Mpy" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -530,7 +551,7 @@
         <!--Selection View Controller-->
         <scene sceneID="ar2-yS-L1J">
             <objects>
-                <collectionViewController id="X3N-l7-Pbz" customClass="SelectionViewController" customModule="JKIguatemi" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="SelectionVC" id="X3N-l7-Pbz" customClass="SelectionViewController" customModule="JKIguatemi" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Vc8-LM-SeI" customClass="CardStackView" customModule="TisprCardStack">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -683,6 +704,7 @@
     </scenes>
     <resources>
         <image name="ad-logo" width="500" height="610"/>
+        <image name="icon-check" width="75" height="75"/>
         <image name="icon-instagram" width="75" height="75"/>
         <image name="icon-trash" width="37.5" height="37.5"/>
         <image name="image-hero" width="1024" height="768"/>
@@ -692,4 +714,7 @@
             <color red="0.83921568627450982" green="0.66274509803921566" blue="0.25098039215686274" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="a3n-11-hzn"/>
+    </inferredMetricsTieBreakers>
 </document>
