--- a/JKIguatemi/Base.lproj/Main.storyboard
+++ b/JKIguatemi/Base.lproj/Main.storyboard
@@ -168,6 +168,9 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="collectionView" destination="eqr-Aa-l5H" id="t8V-GW-ITl"/>
+                                            <outlet property="followersCount" destination="opZ-ay-ZNS" id="Hab-vW-VBB"/>
+                                            <outlet property="nameLabel" destination="Kf0-Xm-dd1" id="jXJ-vT-Yg7"/>
+                                            <outlet property="usernameLabel" destination="RAr-tV-Fdz" id="wvs-Uy-B2h"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -199,10 +202,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="image-hero" translatesAutoresizingMaskIntoConstraints="NO" id="KEQ-bo-cE9">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KEQ-bo-cE9">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="300"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DBd-Id-I7a">
+                                <rect key="frame" x="20" y="256" width="374" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yxS-Oq-pY8">
                                 <rect key="frame" x="0.0" y="300" width="414" height="436"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -282,7 +292,7 @@
                                                                 <rect key="frame" x="0.0" y="0.0" width="130" height="130"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
-                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="image-profile" translatesAutoresizingMaskIntoConstraints="NO" id="Iru-w5-Bvk">
+                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Iru-w5-Bvk">
                                                                         <rect key="frame" x="15" y="0.0" width="100" height="100"/>
                                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                         <userDefinedRuntimeAttributes>
@@ -322,18 +332,13 @@
                                     <outlet property="delegate" destination="JQC-Ix-Eb4" id="Ua7-bF-seG"/>
                                 </connections>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Kristine Froseth" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DBd-Id-I7a">
-                                <rect key="frame" x="20" y="256" width="374" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="0Er-eT-qoD"/>
                     </view>
                     <connections>
+                        <outlet property="influencerHeroImageView" destination="KEQ-bo-cE9" id="Sfc-Iv-R3Y"/>
+                        <outlet property="influencerNameLabel" destination="DBd-Id-I7a" id="Wre-kI-1fB"/>
                         <outlet property="proceedView" destination="WJS-80-ivQ" id="ADs-cP-TA3"/>
                         <outlet property="tableView" destination="yxS-Oq-pY8" id="cmO-14-rXg"/>
                     </connections>
@@ -707,7 +712,6 @@
         <image name="icon-check" width="75" height="75"/>
         <image name="icon-instagram" width="75" height="75"/>
         <image name="icon-trash" width="37.5" height="37.5"/>
-        <image name="image-hero" width="1024" height="768"/>
         <image name="image-profile" width="550" height="458"/>
         <image name="image1" width="682" height="1024"/>
         <namedColor name="Gold">
@@ -715,6 +719,6 @@
         </namedColor>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="a3n-11-hzn"/>
+        <segue reference="ylN-Zk-gCy"/>
     </inferredMetricsTieBreakers>
 </document>
