--- a/JKIguatemi/Base.lproj/Main.storyboard
+++ b/JKIguatemi/Base.lproj/Main.storyboard
@@ -341,6 +341,7 @@
                         <outlet property="influencerNameLabel" destination="DBd-Id-I7a" id="Wre-kI-1fB"/>
                         <outlet property="proceedView" destination="WJS-80-ivQ" id="ADs-cP-TA3"/>
                         <outlet property="tableView" destination="yxS-Oq-pY8" id="cmO-14-rXg"/>
+                        <segue destination="xgF-Ty-ZSY" kind="show" identifier="toBroadcastVC" id="dA8-wW-cwp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OR6-k1-e0p" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -363,7 +364,6 @@
                             </userDefinedRuntimeAttributes>
                             <connections>
                                 <action selector="broadcastPressed:" destination="JQC-Ix-Eb4" eventType="touchUpInside" id="45X-mL-heA"/>
-                                <segue destination="xgF-Ty-ZSY" kind="show" id="ylN-Zk-gCy"/>
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget nulla felis" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="co2-d4-TJk">
@@ -452,7 +452,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Lorem ipsum dolet amec iames soled inodo lorem ipsum" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bQp-Ag-1aW">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="As fotos selecionadas estão em análise..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bQp-Ag-1aW">
                                 <rect key="frame" x="20" y="78" width="374" height="63"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
@@ -523,7 +523,7 @@
                                                         </collectionViewCell>
                                                     </cells>
                                                 </collectionView>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="image1" translatesAutoresizingMaskIntoConstraints="NO" id="Zbg-UF-JIh">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Zbg-UF-JIh">
                                                     <rect key="frame" x="148" y="11" width="119" height="170"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
@@ -551,7 +551,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O6V-ky-Mpy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1118.840579710145" y="132.88043478260872"/>
+            <point key="canvasLocation" x="1062" y="146"/>
         </scene>
         <!--Selection View Controller-->
         <scene sceneID="ar2-yS-L1J">
@@ -713,12 +713,11 @@
         <image name="icon-instagram" width="75" height="75"/>
         <image name="icon-trash" width="37.5" height="37.5"/>
         <image name="image-profile" width="550" height="458"/>
-        <image name="image1" width="682" height="1024"/>
         <namedColor name="Gold">
             <color red="0.83921568627450982" green="0.66274509803921566" blue="0.25098039215686274" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ylN-Zk-gCy"/>
+        <segue reference="dA8-wW-cwp"/>
     </inferredMetricsTieBreakers>
 </document>
